# elevate-backend

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml
src/: main.rs
src/emails/: password_reset_confirmation.html  password_reset_request.html  verification.html  verification_confirmation.html  welcome.html
src/migrations/: alerts.sql  location.sql  tokens.sql  user.sql
src/models/: alerts.rs  auth.rs  database.rs  location.rs  mod.rs  user.rs
src/pages/: email_verification.html  email_verification_request.html  email_verification_success.html  message_template.html  password_reset.html  password_reset_request.html  password_reset_success.html
src/services/: email.rs  firebase.rs  mapquest.rs  mod.rs
src/views/: alert.rs  assets.rs  catchers.rs  location.rs  mod.rs  pages.rs  request.rs  user.rs
